--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -114,9 +114,10 @@
 
 .dropdownMenu {
     position: absolute;
-    top: 70%;
-    left: -2vw;
-    background-color: #8a7777;
+    top: 83%;
+    width: auto;
+    left: -5vw;
+    background-color: #d7d7d7;
     border: 1px solid #ccc;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -126,6 +127,11 @@
 
 .dropdownMenu h3 {
     margin: 10px 0px;
+}
+
+.imageUserHeader{
+    width: 20px;
+    height: 20px;
 }
 
 .dropdownContainer {
@@ -140,8 +146,10 @@
     position: absolute;
     padding: 5px 2vw;
     cursor: pointer;
-    left: -2vw;
-    background-color: #8a7777;
+    left: -5vw;
+    border-radius: 3px;
+    top: 15%;
+    background-color: #d7d7d7d4;
     align-items: center;
 }
 
