--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -1,6 +1,6 @@
 .imageBanner{
     width: 100%;
-    height: 500px;
+    height: 650px;
     object-fit: cover;
     position: relative;
     z-index: 0;
@@ -11,10 +11,18 @@
     position: absolute;
     z-index: 2;
     width: 100%;
-    height: 500px;
+    height: 650px;
     top: 0;
     left: 0;
+    
 }
 .homeBanner{
     width: 100%;
+    height: 650px;
+}
+
+@media screen and (max-width: 960px) {
+    .homeBanner{
+        display: none;
+    }
 }
