--- a/src/components/registerBlock/registerBlock.css
+++ b/src/components/registerBlock/registerBlock.css
@@ -1,19 +1,19 @@
 .registerForm{
-    display: flex;
-    flex-direction: column;
-    padding-left: 30px;
-    background-color: #949396;
-    padding: 0px 4%;
-    z-index: 5;
-    width: 20vw;
-    justify-content: center;
-    border-radius: 0px 6px 6px 0px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 30px;
+  background-color: #949396;
+  padding: 0px 4%;
+  z-index: 5;
+  width: 38.2%;
+  justify-content: center;
+  border-radius: 6px 0px 0px 6px;
+  box-shadow: -39px 0px 34px 0px rgba(0,0,0,0.1);
 }
 
 .bannerRegister {
-  width: 30vw;
-  height: 40vw;
-  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .backgroundImageBanner{
@@ -29,20 +29,28 @@
   flex-direction: column;
   height: 100%;
   align-items: center;
+  background-color: #000000a1;
   justify-content: space-around;
   position: relative;
 }
 
 .registerComponent {
-    border-radius: 6px;
-    position: absolute;
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    display: flex;
-    -webkit-box-shadow: 0px 0px 47px -10px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 0px 47px -10px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 47px -10px rgba(0,0,0,0.75);
+  border-radius: 6px;
+  position: absolute;
+  /* top: 50%; */
+  top: 0;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  /*background-image: url("https://i.pinimg.com/originals/ec/45/ea/ec45eaef22ce931b6aa110d035fa724e.jpg");*/
+  background-image: url("https://w.wallha.com/ws/10/zs1GA36p.jpg");
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat;
+  display: flex;
+  -webkit-box-shadow: 0px 0px 47px -10px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 47px -10px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 47px -10px rgba(0,0,0,0.75);
 }
 
 .inputSession{
