--- a/src/components/registerBlock/registerBlock.css
+++ b/src/components/registerBlock/registerBlock.css
@@ -1,4 +1,4 @@
-.registerForm{
+.registerForm {
   display: flex;
   flex-direction: column;
   padding-left: 30px;
@@ -8,7 +8,7 @@
   width: 38.2%;
   justify-content: center;
   border-radius: 6px 0px 0px 6px;
-  box-shadow: -39px 0px 34px 0px rgba(0,0,0,0.1);
+  box-shadow: -39px 0px 34px 0px rgba(0, 0, 0, 0.1);
 }
 
 .bannerRegister {
@@ -16,7 +16,7 @@
   height: 100%;
 }
 
-.backgroundImageBanner{
+.backgroundImageBanner {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -44,154 +44,179 @@
   left: 0;
   /*background-image: url("https://i.pinimg.com/originals/ec/45/ea/ec45eaef22ce931b6aa110d035fa724e.jpg");*/
   background-image: url("https://w.wallha.com/ws/10/zs1GA36p.jpg");
-  background-size: cover; 
-  background-position: center; 
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   display: flex;
-  -webkit-box-shadow: 0px 0px 47px -10px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 47px -10px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 47px -10px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 0px 47px -10px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 47px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 47px -10px rgba(0, 0, 0, 0.75);
 }
 
-.inputSession{
-    height: 2vw;
-    border-radius: 5px;
-    border: 0px;
-    font-size: 1.1rem;
+.inputSession {
+  height: 2vw;
+  border-radius: 5px;
+  border: 0px;
+  font-size: 1.1rem;
 }
 
-.registerForm input{
-height: 1.8vw;
-border-radius: 5px;
-border: 0px;
-font-size: 1.1rem;
+.registerForm input {
+  height: 1.8vw;
+  border-radius: 5px;
+  border: 0px;
+  font-size: 1.1rem;
 }
 
 
-.registerForm input:focus{ 
-        border-color: rgb(54, 50, 50); /* Cambia el color del borde al estar enfocado */
-        border-width: 15px;
-        border: 1px solid rgb(34, 32, 32); /* Cambia el grosor del borde al estar enfocado */
-        outline: none;
+.registerForm input:focus {
+  border-color: rgb(54, 50, 50);
+  /* Cambia el color del borde al estar enfocado */
+  border-width: 15px;
+  border: 1px solid rgb(34, 32, 32);
+  /* Cambia el grosor del borde al estar enfocado */
+  outline: none;
 }
 
-.inputError{
-    height: 2vw;
-    border-radius: 5px;
-    border: 1px solid red;
-    font-size: 1.1rem;
-}
-  
-.inputError input:focus{
-    height: 2vw;
-    border-radius: 5px;
-    border: 1px solid red;
-    font-size: 1.1rem;
- }
-
-
-.registerForm label{
-    font-size: 1.2rem;
-    font-weight: 500;
-    padding: 0.3% 0%;
+.inputError {
+  height: 2vw;
+  border-radius: 5px;
+  border: 1px solid red;
+  font-size: 1.1rem;
 }
 
-.registerLogo{
-    object-fit: contain;
-       
+.inputError input:focus {
+  height: 2vw;
+  border-radius: 5px;
+  border: 1px solid red;
+  font-size: 1.1rem;
 }
 
-.registerInputContent{
-    display: flex;
-    flex-direction: column;
-    padding: 1.4% 0%;
+
+.registerForm label {
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding: 0.3% 0%;
+}
+
+.registerLogo {
+  object-fit: contain;
+
+}
+
+.registerInputContent {
+  display: flex;
+  flex-direction: column;
+  padding: 1.4% 0%;
 }
 
 /* Validation css start*/
-.errorDiv{
-    width: 100%;
+.errorDiv {
+  width: 100%;
 }
-.errorMsg{
-    width: 100%;
-    margin: 1%;
-    color: red;
-    position: absolute;
+
+.errorMsg {
+  width: 100%;
+  margin: 1%;
+  color: red;
+  position: absolute;
 }
+
 /* Validation css end */
 
-.registerFormContainer{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding-bottom: 3%;
+.registerFormContainer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-bottom: 3%;
 }
 
-.registerPart1{
-    padding: 0% 2%;
+.registerPart1 {
+  padding: 0% 2%;
 }
 
-.registerPart2{
-    padding: 0% 2%;
+.registerPart2 {
+  padding: 0% 2%;
 }
 
 .button-87 {
-padding: 15px 30px;
-text-align: center;
-text-transform: uppercase;
-transition: 0.5s;
-background-size: 200% auto;
-color: white;
-border-radius: 10px;
-display: block;
-border: 0px;
-font-weight: 700;
-box-shadow: 0px 0px 14px -7px #f09819;
-background-image: linear-gradient(45deg, #0e0d0d 0%, #199af0  51%, #5f5b5a  100%);
-cursor: pointer;
-user-select: none;
--webkit-user-select: none;
-touch-action: manipulation;
+  padding: 15px 30px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #f09819;
+  background-image: linear-gradient(45deg, #0e0d0d 0%, #199af0 51%, #5f5b5a 100%);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
 .button-87:hover {
-background-position: right center;
-/* change the direction of the change here */
-color: #fff;
-text-decoration: none;
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
 }
 
 .button-87:active {
-transform: scale(0.95);
+  transform: scale(0.95);
 }
 
-.nameContainer{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+.nameContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
-.nameContainer .registerInputContent{
-    width: 49%;
+.nameContainer .registerInputContent {
+  width: 49%;
 }
+
+/******** ERRORS  ***************************/
+.errorBlock-register {
+  width: 100%;
+  margin: 1% 0%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 2%;
+}
+
+.iconError-register {
+  display: none;
+}
+
+.errorBlock-msg-register {
+  margin: 0 2%;
+  color: red;
+}
+
+/********************************************/
 
 @media (min-width: 960px) and (max-width: 1279px) {
-    .registerForm {
-      display: flex;
-      flex-direction: column;
-      padding-left: 30px;
-      background-color: #949396;
-      padding: 0px 4%;
-      z-index: 5;
-      width: 25vw;
-      justify-content: center;
-      border-radius: 0px 6px 6px 0px;
+  .registerForm {
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+    background-color: #949396;
+    padding: 0px 4%;
+    z-index: 5;
+    width: 25vw;
+    justify-content: center;
+    border-radius: 0px 6px 6px 0px;
   }
 
   .bannerRegister {
     width: 35vw;
     height: 53vw;
-    background: rgb(62,61,61);
-    background: linear-gradient(205deg, rgba(62,61,61,1) 16%, rgba(154,179,174,1) 84%);
+    background: rgb(62, 61, 61);
+    background: linear-gradient(205deg, rgba(62, 61, 61, 1) 16%, rgba(154, 179, 174, 1) 84%);
     position: relative;
   }
 
@@ -215,39 +240,39 @@ transform: scale(0.95);
     border: 0px;
     font-size: 1.1rem;
   }
-  
-  .bannerImage{
+
+  .bannerImage {
     width: 15vw;
   }
+}
+
+
+@media (max-width: 959px) {
+  @media (max-width: 959px) {
+    .bannerRegister {
+      display: none;
+    }
+
+    .registerForm {
+      width: 100%;
+    }
+
+    .registerComponent {
+      width: 100%;
+      height: 100%;
+    }
+
+    .inputSession {
+      height: 7vw;
+    }
+
+    .inputError:hover {
+      height: 7vw;
+    }
+
+    .inputError {
+      height: 7vw;
+    }
   }
 
-
-  @media (max-width: 959px){
-    @media (max-width: 959px) {
-        .bannerRegister{
-          display: none;
-        }
-        
-        .registerForm{
-          width: 100%;
-        }
-
-        .registerComponent{
-          width: 100%;
-          height: 100%;
-        }
-
-        .inputSession{
-          height:7vw;
-        }
-        
-        .inputError:hover{
-          height: 7vw;
-        }
-
-        .inputError{
-          height: 7vw;
-        }
-      }
-
-  }
+}
