--- a/src/components/userInformationBlock/userInformationBlock.css
+++ b/src/components/userInformationBlock/userInformationBlock.css
@@ -53,3 +53,11 @@
   .userInformationOption:hover {
     color: rgba(47, 41, 41, 0.583);
   }
+
+  @media (min-width: 960px) and (max-width: 1279px) {
+    .userInformationContainer {
+      width: 85%;
+      position: relative;
+      margin-bottom: 1%;
+    }
+}
