--- a/src/components/userSelectedBlock/userSelectedBlock.css
+++ b/src/components/userSelectedBlock/userSelectedBlock.css
@@ -36,6 +36,7 @@
     cursor: pointer;
     width: 45%;
     display: flex;
+    margin: 1% 0%;
     align-items: center;
     transition: box-shadow 0.3s ease-in;
 }
@@ -43,7 +44,7 @@
 .productFavContainer{
     display: flex;
     justify-content: space-around;
-    margin-top: 1%;
+    flex-wrap: wrap;
 }
 
 
@@ -139,4 +140,14 @@ border-bottom: 1px solid;
 
 #userInfoInput:focus{
     outline: none;
+}
+
+
+@media (min-width: 960px) and (max-width: 1279px) {
+    .userSelectedBlockBox{
+        width: 85%;
+        display: flex;
+        justify-content: flex-end  
+    }
+    
 }
